footnotes numbers till 50

--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
           start-up culture which, in the name
           of
           innovation, does not perceive, or refuse to admit, the discrepancies of its economic model.
-          Between the 1980s and the end 
-          
+          Between the 1980s and the end
+
         </div>
       </section>
     </div>
@@ -466,7 +466,7 @@
     <div class="two">
       <section>
         <div class="twoCol">
-          
+
           of the twentieth century, cyberspace is still a place where market regulations
           are inapplicable or unapplied. Therefore, we witnessed the surge of contrasting visions for the possible
           missions of the internet. The philosophy of the free exchange of knowledge—brought about by activists such
@@ -577,7 +577,8 @@
           output.
           During the conference “Adobe Systems: The Founder’s Perspective,” Geschke addressed the two main points of
           Adobe’s philosophy of the time: “Everybody should have their own computer. […] A computer is not primarily
-          used to calculate; it’s used to communicate.” Giving access to technology to a wider market remains, as for
+          used to calculate; it’s used to communicate.”<span class="fnnum">[29]</span> Giving access to technology to a
+          wider market remains, as for
           Apple, one of the initial preoccupations of the company. And giving them the opportunity to imagine a
           pragmatic use of the machine computer with the connection to a printer was a breakthrough. Nevertheless,
           from
@@ -605,7 +606,7 @@
           pushed the boundaries of their research focused on hybrid forms on the edge between traditional and
           unconventional design: “We both [VanderLans and Licko], each in our own way, really enjoyed this machine. It
           forced us to question everything we had learnt about design. We both enjoyed that process of exploration, of
-          how far you could push the limits.”
+          how far you could push the limits.”<span class="fnnum">[30]</span>
           At the beginning of the twenty-first century, the major success of their products led Adobe to progress
           exponentially. Expanding the offer and acquiring competitors’ products and companies, the corporation-to-be
           set a new trajectory for conquering the market—a market they helped define—and assembled an entire armada of
@@ -644,7 +645,8 @@
           In October 2019, Adobe temporarily blocked the access to Venezuelan customers to their products and enabled
           their customers to access their work on the Creative Cloud. The decision came in conformity with the US
           government’s decision of prohibiting transactions and services between companies of the United States and
-          Venezuela and dramatically revealed the flaw of their subscription-only business model. After month of
+          Venezuela<span class="fnnum">[31]</span> and dramatically revealed the flaw of their subscription-only
+          business model. After month of
           negotiations with the US government, Adobe was able to restore the Venezuelan customers’ access to the
           Cloud.
           Nevertheless, the incident revealed the fragility of designers’ freedom and independence from the Adobe’s
@@ -656,7 +658,7 @@
             individual
             the way you’d like to be treated. […] That would be the Adobe way. Because when you are in business, your
             customers, in many cases, have their business critically dependent on your ability to deliver a quality
-            product on time when you promise it.
+            product on time when you promise it.<span class="fnnum">[32]</span>
           </p>
           <h3>1.1.3 Google Design</h3>
           We have observed how Apple and Adobe contributed to creating and developing the computer and software market
@@ -664,7 +666,8 @@
           have educated, during the years, designers as well as a broader audience, and enabled them to appropriate
           the
           computer—till that moment seen as a computational machine for calculations—as a tool for communication and
-          visual creation. Both Apple and Adobe’s efforts towards accessibility translated into creating environments
+          visual creation.<span class="fnnum">[33]</span> Both Apple and Adobe’s efforts towards accessibility
+          translated into creating environments
           and interfaces that were easy to use and understand. However, the temporary users’ understanding of the
           personal computer’s functions has metamorphosized into a lack of autonomy in front of the ever-changing
           technology. From the middle of the 1980s to the beginning of the 2000s, we witnessed the increase of the
@@ -681,7 +684,7 @@
           offer,
           forgoing the singularity and uniqueness that typographers used to bring to each design project. In January
           2019, the branding agency Carré Noir redesigned the city of Paris’ logo and identity, using the font
-          Montserrat as its main typeface—one of Google Font’s best sellers.
+          Montserrat as its main typeface—one of Google Font’s best sellers.<span class="fnnum">[34]</span>
           Is this business model a simple gesture to emancipate the users? The paradox of innovation of the start-up
           culture is still current. The shift toward a more open business model seems to benefit the tech corporation
           that, in providing commodities, retains its customers in its comforting cybercommunity. The complexity of
@@ -694,17 +697,18 @@
           open access to design tools with the mission of providing accessibility to a better design seemed innovative
           and far-sighted. If we watch the teaser Making Material Design published online for the release, we can
           identify some keywords such as “collaboration,” “community,” “experiment” that are repositioning the
-          philosophy of Google towards a place close to the free open source approach.
+          philosophy of Google towards a place close to the free open source approach.<span class="fnnum">[35]</span>
           The proposition is appealing. Nevertheless, the main consequences of Google’s proposition are the esthetical
           uniformity of interaction design products’, and the weakening of designers’ legitimacy as professional
           experts. Presenting the color palettes of Material Design, Google’s Senior Designer Rachel Been stated:
           “[with] this really simplified and easy-to-use system, […] someone who never took a color theory class could
-          create a combination of colors within their products that felt harmonious.”
+          create a combination of colors within their products that felt harmonious.”<span class="fnnum">[36]</span>
           Google has drastically contributed to the commodification of design practice and culture, fostering an ideal
           of “universal design” open to everyone, for everyone, by everyone, dramatically undermining the importance
           of
           designing with a focus on singularities. Matias Duarte, Vice-President of Material Design, reiterated their
-          ideal of proposing principles of design that “should be timeless” in order to achieve a universal framework.
+          ideal of proposing principles of design that “should be timeless” in order to achieve a universal
+          framework.<span class="fnnum">[37]</span>
           The concepts of universality and accessibility are, thus, central to this thesis’ investigations.
           For years, the free open source culture’s communities have pursued a parallel path, observing the
           development
@@ -741,14 +745,17 @@
           can’t
           understand the tools without understanding the culture and vice-versa. Computer programming is no different.
           […] Part of the challenge of teaching computer programming is making the history and culture available to my
-          students so they can better understand the tools I’m teaching them to use.” History and culture are
+          students so they can better understand the tools I’m teaching them to use.”<span class="fnnum">[38]</span>
+          History and culture are
           inherently
           related to language and vocabulary. Parrish exemplifies this in her keynote, describing how, as a teenager,
           young programmer, and computer passionate, she relied on the software developer Eric S. Raymond’s “Jargon
-          File” to feel like she belonged to “the glory days of hacking and the computer revolution.” Born in 1981,
+          File” to feel like she belonged to “the glory days of hacking and the computer revolution.”<span
+            class="fnnum">[39]</span> Born in 1981,
           she
           was too young to have lived the era, between the 1950s and the 1980s, during which hackers’ terminology and
-          their values were rooted. She thus consciously adopted the “Jargon File” as her own culture.”
+          their values were rooted. She thus consciously adopted the “Jargon File” as her own culture.”<span
+            class="fnnum">[40]</span>
           First published in the early 1990s, the informal web text the “Jargon File” is still considered one of the
           primary references to define hacker’s terminology. Raymond is one of the most influential and prolific
           theorists who thoroughly contributed to defining, promoting, and supporting the hacker’s community and the
@@ -757,21 +764,25 @@
           enthusiastic
           network newbies asking (in effect) ‘how can I learn to be a wizardly hacker?’ Oddly enough there don’t seem
           to
-          be any other FAQs or web documents that address this vital question, so here’s mine.”
+          be any other FAQs or web documents that address this vital question, so here’s mine.”<span
+            class="fnnum">[41]</span>
           What is a hacker, then? First, to demystify the communal belief about hackers, it is essential to make a
           clear
-          distinction between the concept of “hackers” and the one of “crackers.” The media have often wrongly
+          distinction between the concept of “hackers” and the one of “crackers.”<span class="fnnum">[42]</span> The
+          media have often wrongly
           depicted
           hackers as people employing their skills to steal credit card numbers or sell confidential information. But
           if
           we refer to hackers’ literature on the internet, we understand that this behavior is considered, by the
           hacker
-          community itself, as “lazy, irresponsible, and not very bright.” In How to Become a Hacker, Eric Raymond
+          community itself, as “lazy, irresponsible, and not very bright.”<span class="fnnum">[43]</span> In How to
+          Become a Hacker, Eric Raymond
           stated that “being able to break security doesn’t make you a hacker any more than being able to hotwire cars
           makes you an automotive engineer. […] The basic difference is this: hackers build things, crackers break
-          them.”
+          them.”<span class="fnnum">[44]</span>
           A few years earlier, in 1984, writer and journalist Steven Levy published Hackers. Heroes of the Computer
-          Revolution. Levy portraited the “the glory days of hacking and the computer revolution” dreamed by Allison
+          Revolution. Levy portraited the “the glory days of hacking and the computer revolution”<span
+            class="fnnum">[45]</span> dreamed by Allison
           Parrish and retraced the origins of the term “hacker” and narrated the community’s early pranks in the rooms
           of MIT. In the preface to the 2010 edition, Levy stated:
           <br><br>
@@ -783,13 +794,15 @@
             quite different. Beneath their often unimposing exteriors, they were adventurers, visionaries,
             risk-takers,
             artists… and the ones who most clearly saw why the computer was a truly revolutionary tool. […] I came to
-            understand why true hackers consider the term an appellation of honor rather than a pejorative.
+            understand why true hackers consider the term an appellation of honor rather than a pejorative.<span
+              class="fnnum">[46]</span>
           </p>
           <br>
           To restore that vision of the community, Levy listed the Hacker Ethic, a series of principles that are still
           claimed, by the contemporary programming community, as their foundation: unlimited access to computers,
           freedom of information, decentralization of power, and anti-academic position. Levy concluded the list with:
-          “You can create art and beauty on a computer” and “Computers can change your life for the better.” Although
+          “You can create art and beauty on a computer”<span class="fnnum">[47]</span> and “Computers can change your
+          life for the better.”<span class="fnnum">[48]</span> Although
           certain aspects remain controversial, Levy’s Hacker Ethic still reflected the building blocks not only of
           the
           hacker culture, but of the communities that have been inspired by the free software and open source models.
@@ -803,12 +816,14 @@
           Over the last fifteen years, the term “open source” has increasingly gained notability, and its use has been
           “stretched [to] activities, such as government, education, and science, where there is no such thing as
           source
-          code.” The open source methodology is built on decentralization and collaboration; yet “open source” does
+          code.”<span class="fnnum">[49]</span> The open source methodology is built on decentralization and
+          collaboration; yet “open source” does
           not
           imply freedom of access, use, replication, and distribution.
           The arise of the term “open source” is inherently connected to Linus Torvalds’s lifetime work, the open
           source
-          operating system Linux, still considered one of the “world’s largest collaborative projects.” His work was
+          operating system Linux, still considered one of the “world’s largest collaborative projects.”<span
+            class="fnnum">[50]</span> His work was
           an
           essential contribution in exposing the open source model—and in consequentially defining it—but also caused
           the fracture between the free software and the open source movements, in opposition about the ethics of
