first pages no counter

--- a/index.html
+++ b/index.html
@@ -37,6 +37,210 @@
 
   <div class="wrapper">
 
+    <div class="two">
+
+      <section class="oneCol">
+
+        <h1 class="maintitle">From Processing to Design</h1><br>
+        <h1>Open Source Culture and the Redefinition <br>of Contemporary Graphic Design Practice</h1>
+
+        <section style="font: size 14pt">A Master’s Thesis by<br>
+          <b>Lucrezia Russo</b>
+        </section>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+
+        Presented to the department of Transdisciplinary New Media <br>
+        in partial fulfillment of the requirements for <br>
+        <b>Master of Fine Arts in Transdisciplinary New Media</b>
+        <br><br>
+        PARIS COLLEGE OF ART<br>
+        January 2022
+        <br><br>
+        <br><br>
+        Presented to
+        <b>Linda Jarvin</b>, Dean<br>
+        <b>Klaus Fruchtnis</b>, Associate Dean of Graduate Studies,<br>
+        Chair of Transdisciplinary New Media<br>
+        <b>Pauline Chasseray-Peraldi</b>, Thesis Advisor<br>
+        <b>Lisa Salamandra</b>, Master’s Thesis Faculty<br>
+
+        <div>
+          <p id="textpagebreak">
+          </p>
+        </div>
+
+
+        <h1>Acknowledgments</h1>
+        This thesis is a concise (and non-exhaustive) synthesis of a decade of observations. Since 2010, when I
+        accidentally bumped into Kevin Donnot’s article “Code = design,” the interest and attraction towards
+        Processing
+        and its community have never weakened. I was hooked then; I am still in awe now. The growth and evolution of
+        Processing’s community was a constant source of inspiration and guided me in searching for a meaningful stance
+        as a graphic designer and educator. Constantly questioning and readjusting their trajectory, they have never
+        ceased to be a guiding light. Despite not being a coder, I never felt apart from their community, always
+        sharing
+        their values and ambitions. This text is my way to show my gratitude, offering my perspective on Processing’s
+        exceptional contribution in shaping contemporary design practice.<br><br>
+        This achievement wouldn’t have been possible without the guidance of my thesis advisor Pauline
+        Chasseray-Peraldi: her enlightened perspective, thorough feedback, and rigorous gaze helped me apprehend the
+        beauty of transdisciplinary research, giving me the keys to translating through text what I usually express
+        visually. A big thank you goes to my instructor Lisa Salamandra, for her infinite patience and support and for
+        giving me the tools to embrace academic writing as an empowering practice—even if, sometimes, it felt like an
+        excruciating process. I also want to thank Klaus Fruchtnis, Linda Jarvin, and Paris College of Art for the
+        opportunity of participating in this Master.<br><br>
+        This thesis wouldn’t have existed without the help of my friends and colleagues. To my classmates Alicia,
+        Anita,
+        Laura, Porus, and Tara—companions throughout our mutual struggles, frustrations, and final accomplishments—a
+        big
+        thank you for making this journey a bit lighter. Congratulations on your achievements. To Spencer Kehe, Max
+        Franklin, Tara Bogart, Gökçe Taskan, Filipa Cruz, Barbara Montefalcone, and Alix de Mercey: thank you for
+        perpetually listening, unconditionally supporting, constantly questioning, sometimes doubting, and often
+        tolerating: your support has kept me on track. A very big thank you to Véronique Vienne for being my constant
+        inspiration.<br><br>
+        Finally, I want to thank warmly Dorothy Santos and Dan Shiffman for their incredible generosity in offering
+        their time to discuss Processing, coding, and education; and Casey Reas and Lauren McCarthy for pointing my
+        research in the right direction. I hope that this text will highlight the relevance of their work and join
+        further conversations about the intersections of art, design, technology, and education.
+        <br> <br>
+
+
+        <h1 id="h1Abstract">Abstract</h1>
+        This thesis analyzes how the free open source culture has, over the last two decades, reshaped the graphic
+        design practice and redefined the contemporary graphic designer’s position. After having contextualized and
+        juxtaposed the start-up and the free open source cultures, this research investigates how Processing, coding
+        language and programming environment, has contributed to the reappropriation of creative tools and fostered a
+        radical stance against the commodification of design culture imposed by tech monopolies. Giving new meaning to
+        the expression “open source,” the project Processing has promoted accessibility and decentralized
+        collaboration,
+        expanding these concepts to fields beyond software development.
+        Since its first release in 2001, Processing shifted from being a creative platform towards representing a
+        system
+        of values, and its influence on design and designers has immensely contributed to the emergence of new
+        patterns
+        in the graphic design field. Driven by Processing’s core values—access, community, free—graphic design has
+        acquired a social and political dimension. In addition to distancing their productions from standardized
+        esthetics through the reappropriation of their creative tools, graphic designers have revealed alternative
+        methodologies that encompass values of accessibility and inclusion as a critical part of their work. These
+        methodologies, including the hybridization of production tools, DIY distribution methods, participatory
+        generative design, and the use of cyberspace as a free framework, became valid propositions for a practice
+        renewal based on responsibility and flexibility.
+
+
+        <h2>Keywords</h2>
+        Graphic Design, Design Practice, Processing, Free Open Source, Programming
+
+      </section>
+    </div>
+
+    <div class="one">
+      <section class="oneCol">
+        <aside>
+          <div class="footnote">
+            1<br>
+            1<br>
+            1<br>
+            1<br>
+            1<br>
+          </div>
+        </aside>
+
+      </section>
+    </div>
+
+    <div class="two">
+      <section class="oneCol">
+
+        <h1>Table of Contents</h1>
+
+        Acknowledgements iii<br>
+        List of Figures vi<br><br>
+
+        Introduction 1 <br><br>
+        1. Start-up vs. Free Open Source: Contrasting Cultures 3<br>
+        <div class="indent1">
+          1.1 From Counterculture to Monopoly: A Start-up Story 5<br>
+        </div>
+        <div class="indent2">
+          1.1.1 Apple Computer 6<br>
+          1.1.2 Adobe Systems 8<br>
+          1.1.3 Google Design 11<br>
+        </div>
+        <div class="indent1">
+          1.2 From Hackers to FLOSS (Free/Libre Open Source Software): A Moral Debate 12<br>
+        </div>
+        <div class="indent2">
+          1.2.1 Hackers: A Matter of Jargon 13<br>
+          1.2.2 Open Source and Free Software: A Fracture 14<br>
+          1.2.3 FLOS Software and FLOS Culture for the Visual Arts: Towards a New Definition 16<br>
+        </div>
+        1.3 Conclusion: Joining the Dots 16<br><br>
+
+        2. Processing: from Code to Platform 18<br>
+        <div class="indent1">
+          2.1 MIT’s Heritage 18<br>
+        </div>
+          <div class="indent2">
+          2.1.1 Muriel Cooper: from Visual Language Workshop to Information Landscape 19<br>
+          2.1.2 John Maeda: from Aesthetics + Computation Group to Design by Numbers 20<br>
+          2.1.3 Casey Reas and Ben Fry: Processing 22<br>
+        </div>
+        <div class="indent1">
+          2.2 Processing: Language, Environment, Community 22<br>
+          </div>
+          <div class="indent2">
+          2.2.1 Language: Code, Emergence, Multiverse 23<br>
+          2.2.2 Environment: An Expanded Field 24<br>
+          2.2.3 Community: A Platform for Education 26<br>
+        </div>
+        2.3 Conclusion: From Platform to System of Values 27<br><br>
+
+        3. From Processing to (Graphic) Design 29<br>
+        <div class="indent1">
+          3.1 Access: Hybrid Practices 29<br>
+        </div>
+        <div class="indent2">
+          3.1.1 Digital Fabrication and Traditional Printing Techniques 30<br>
+          3.1.2 The Open Source Sharing Model and the New Craft 31<br>
+        </div>
+        <div>
+          3.2 Community: Generative Identities and Design for the Multiple 33<br>
+          3.2.1 From Flexible to Generative Identities 33<br>
+          3.2.2 Generative Design and Participatory Practices 35<br>
+        </div>
+        <div class="indent1">
+          3.3 Free: Independent Publishing 36<br>
+        </div>
+        <div class="indent2">
+          3.3.1 The Contemporary “Democratic Multiple” 36<br>
+          3.3.2 Independent Tools for Independent Publishing 37<br>
+        </div>
+        3.4 Conclusion: Towards a Practice Renewal 38<br><br>
+
+        Conclusion 39<br><br>
+        Bibliography 42<br>
+
+
+        <div>
+          <p id="textpagebreak">
+          </p>
+        </div>
+
+
+      </section>
+    </div>
+
+
     <div class="one">
       <aside>
         <div class="footnote" id="footnoteIntro">
