page number fixed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <section class="oneCol">
 
-        <h1 class="maintitle">From Processing to Design</h1><br>
+        <h1>From Processing to Design</h1><br>
         <h1>Open Source Culture and the Redefinition <br>of Contemporary Graphic Design Practice</h1>
 
         <section style="font: size 14pt">A Master’s Thesis by<br>
