--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
 
       <section class="oneCol">
 
-        <h4>From Processing to Design</h4><br>
-        <h4>Open Source Culture and the Redefinition <br>of Contemporary Graphic Design Practice</h4>
+        <h4><span style="font-size: 28pt;">From Processing to Design</span><br><br>
+          Open Source Culture and the Redefinition of Contemporary Graphic Design Practice</h4>
 
-        <section style="font: size 14pt">A Master’s Thesis by<br>
-          <b>Lucrezia Russo</b>
-        </section>
         <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
+        <span style="font-size: 12pt;">A Master’s Thesis by<br>
+          <b>Lucrezia Russo</b></span>
 
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
         Presented to the department of Transdisciplinary New Media <br>
         in partial fulfillment of the requirements for <br>
         <b>Master of Fine Arts in Transdisciplinary New Media</b>
@@ -68,7 +68,7 @@
         January 2022
         <br><br>
         <br><br>
-        Presented to
+        Presented to<br>
         <b>Linda Jarvin</b>, Dean<br>
         <b>Klaus Fruchtnis</b>, Associate Dean of Graduate Studies,<br>
         Chair of Transdisciplinary New Media<br>
@@ -80,7 +80,15 @@
           </p>
         </div>
 
+        <div>
+          <p id="textpagebreak">
+          </p>
+        </div>
 
+      </section>
+
+
+      <section>
         <h1>Acknowledgments</h1>
         This thesis is a concise (and non-exhaustive) synthesis of a decade of observations. Since 2010, when I
         accidentally bumped into Kevin Donnot’s article “Code = design,” the interest and attraction towards
@@ -114,6 +122,15 @@
         further conversations about the intersections of art, design, technology, and education.
         <br> <br>
 
+        <div>
+          <p id="textpagebreak">
+          </p>
+        </div>
+
+        <div>
+          <p id="textpagebreak">
+          </p>
+        </div>
 
         <h1 id="h1Abstract">Abstract</h1>
         This thesis analyzes how the free open source culture has, over the last two decades, reshaped the graphic
@@ -136,22 +153,61 @@
         generative design, and the use of cyberspace as a free framework, became valid propositions for a practice
         renewal based on responsibility and flexibility.
 
-
+        <br><br>
         <h2>Keywords</h2>
         Graphic Design, Design Practice, Processing, Free Open Source, Programming
 
       </section>
     </div>
 
+    <div>
+      <p id="textpagebreak">
+      </p>
+    </div>
+
     <div class="one">
       <section class="oneCol">
         <aside>
           <div class="footnote">
-            1<br>
-            1<br>
-            1<br>
-            1<br>
-            1<br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <span style = "font-family: Literata-Regular";>3<br><br></span>
+            <span style = "font-family: Literata-Regular";>5<br><br></span>
+            9<br><br>
+            11<br>
+            <span style = "font-family: Literata-Regular";>12</span><br>
+            <br>
+            <br>
+            <br>
+            <span style = "font-family: Literata-Regular";>17<br></span>
+            <br>
+            <br>
+            <br>
+            <span style = "font-family: Literata-Regular";>20</span><br><br>
+            22<br>
+            <span style = "font-family: Literata-Regular";>22<br></span>
+            <br>
+            <br>
+            <br>
+            <span style = "font-family: Literata-Regular";>25<br></span>
+            <br>
+            <br>
+            <br>
+            <span style = "font-family: Literata-Regular";>28<br><br></span>
+            29<br>
+            <span style = "font-family: Literata-Regular";>29<br></span>
+            <br>
+            <br>
+            <span style = "font-family: Literata-Regular";>31<br></span>
+            <br>
+            <br>
+            <span style = "font-family: Literata-Regular";>32<br></span>
+            <br>
+            <br>
+            <span style = "font-family: Literata-Regular";>34<br><br></span>
+            35<br><br>
+            <span style = "font-family: Literata-Regular";>37<br></span>
           </div>
         </aside>
 
@@ -163,73 +219,87 @@
 
         <h1>Table of Contents</h1>
 
-        Acknowledgements iii<br>
-        List of Figures vi<br><br>
+        Acknowledgements<br><br>
 
-        Introduction 1 <br><br>
-        1. Start-up vs. Free Open Source: Contrasting Cultures 3<br>
+        Abstract<br><br>
+
+        <b>Introduction</b><br><br>
+        <b>1. Start-up vs. Free Open Source: Contrasting Cultures</b><br>
         <div class="indent1">
-          1.1 From Counterculture to Monopoly: A Start-up Story 5<br>
+          1.1 From Counterculture to Monopoly: A Start-up Story<br>
         </div>
         <div class="indent2">
-          1.1.1 Apple Computer 6<br>
-          1.1.2 Adobe Systems 8<br>
-          1.1.3 Google Design 11<br>
+          1.1.1 Apple Computer<br>
+          1.1.2 Adobe Systems<br>
+          1.1.3 Google Design<br>
         </div>
         <div class="indent1">
-          1.2 From Hackers to FLOSS (Free/Libre Open Source Software): A Moral Debate 12<br>
+          1.2 From Hackers to FLOSS (Free/Libre Open Source Software): A Moral Debate<br>
         </div>
         <div class="indent2">
-          1.2.1 Hackers: A Matter of Jargon 13<br>
-          1.2.2 Open Source and Free Software: A Fracture 14<br>
-          1.2.3 FLOS Software and FLOS Culture for the Visual Arts: Towards a New Definition 16<br>
+          1.2.1 Hackers: A Matter of Jargon<br>
+          1.2.2 Open Source and Free Software: A Fracture<br>
+          1.2.3 FLOS Software and FLOS Culture for the Visual Arts: Towards a New Definition<br>
         </div>
-        1.3 Conclusion: Joining the Dots 16<br><br>
+        <div class="indent1">
+          1.3 Conclusion: Joining the Dots<br><br>
+        </div>
 
-        2. Processing: from Code to Platform 18<br>
+        <b>2. Processing: from Code to Platform</b><br>
         <div class="indent1">
-          2.1 MIT’s Heritage 18<br>
-        </div>
-          <div class="indent2">
-          2.1.1 Muriel Cooper: from Visual Language Workshop to Information Landscape 19<br>
-          2.1.2 John Maeda: from Aesthetics + Computation Group to Design by Numbers 20<br>
-          2.1.3 Casey Reas and Ben Fry: Processing 22<br>
-        </div>
-        <div class="indent1">
-          2.2 Processing: Language, Environment, Community 22<br>
-          </div>
-          <div class="indent2">
-          2.2.1 Language: Code, Emergence, Multiverse 23<br>
-          2.2.2 Environment: An Expanded Field 24<br>
-          2.2.3 Community: A Platform for Education 26<br>
-        </div>
-        2.3 Conclusion: From Platform to System of Values 27<br><br>
-
-        3. From Processing to (Graphic) Design 29<br>
-        <div class="indent1">
-          3.1 Access: Hybrid Practices 29<br>
+          2.1 MIT’s Heritage<br>
         </div>
         <div class="indent2">
-          3.1.1 Digital Fabrication and Traditional Printing Techniques 30<br>
-          3.1.2 The Open Source Sharing Model and the New Craft 31<br>
+          2.1.1 Muriel Cooper: from Visual Language Workshop to Information Landscape<br>
+          2.1.2 John Maeda: from Aesthetics + Computation Group to Design by Numbers<br>
+          2.1.3 Casey Reas and Ben Fry: Processing<br>
         </div>
+        <div class="indent1">
+          2.2 Processing: Language, Environment, Community<br>
+        </div>
+        <div class="indent2">
+          2.2.1 Language: Code, Emergence, Multiverse<br>
+          2.2.2 Environment: An Expanded Field<br>
+          2.2.3 Community: A Platform for Education<br>
+        </div>
+        <div class="indent1">
+          2.3 Conclusion: From Platform to System of Values<br><br>
+        </div>
+
+      <b>3. From Processing to (Graphic) Design<br></b>
+        <div class="indent1">
+          3.1 Access: Hybrid Practices<br>
+        </div>
+        <div class="indent2">
+          3.1.1 Digital Fabrication and Traditional Printing Techniques<br>
+          3.1.2 The Open Source Sharing Model and the New Craft<br>
+        </div>
+        <div class="indent1">
+          3.2 Community: Generative Identities and Design for the Multiple<br>
+        </div>
+        <div class="indent2">
+          3.2.1 From Flexible to Generative Identities<br>
+          3.2.2 Generative Design and Participatory Practices<br>
+        </div>
+        <div class="indent1">
+          3.3 Free: Independent Publishing<br>
+        </div>
+        <div class="indent2">
+          3.3.1 The Contemporary “Democratic Multiple”<br>
+          3.3.2 Independent Tools for Independent Publishing<br>
+        </div>
+        <div class="indent1">
+          3.4 Conclusion: Towards a Practice Renewal<br><br>
+        </div>
+
+        <b>Conclusion</b><br><br>
+        Bibliography<br>
+
+
         <div>
-          3.2 Community: Generative Identities and Design for the Multiple 33<br>
-          3.2.1 From Flexible to Generative Identities 33<br>
-          3.2.2 Generative Design and Participatory Practices 35<br>
+          <p id="textpagebreak">
+          </p>
         </div>
-        <div class="indent1">
-          3.3 Free: Independent Publishing 36<br>
-        </div>
-        <div class="indent2">
-          3.3.1 The Contemporary “Democratic Multiple” 36<br>
-          3.3.2 Independent Tools for Independent Publishing 37<br>
-        </div>
-        3.4 Conclusion: Towards a Practice Renewal 38<br><br>
-
-        Conclusion 39<br><br>
-        Bibliography 42<br>
-
 
         <div>
           <p id="textpagebreak">
