--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
         </div>
       </section>
     </div>
-    
+
     <div class="one">
       <aside>
         <div class="footnote" id="footnoteIntro">
@@ -3063,6 +3063,7 @@
                 Maeda, John, and Sabineas, Jeanoponte. <i>Maeda@media : Journal d’un explorateur du numérique</i>.
                 Paris:
                 Thames Hudson, 2000.<br><br>
+                <br>
 
                 Mari, Enzo. <i>Autoprogettazione</i>. Bilingual edition. Mantova: Corraini, 2014.<br><br>
 
@@ -3105,12 +3106,11 @@
                 Donnot, Kevin. “Code = design.” <i>Graphisme En France 2012 : Code <> Outils <> Design</i>, trans.
                 Lucrezia
                 Russo. Centre national des arts plastiques, 2012, 5-9.<br><br>
-                <br><br>
-                <br><br>
 
                 Barbrook, Richard and Andy Cameron. “The Californian Ideology.”<i>Science as Culture</i>, vol. 6,
                 <br>n.1,
                 1996.<br><br>
+                <br><br>
 
                 Coppola, Christopher D. “Open Source-Opens Learning: Why Open Source Makes Sense for Education.”
                 <i>Open Source</i>, n.d., 15.<br><br>
@@ -3149,26 +3149,26 @@
 
                 Masure, Antony. “Visual Culture Open Source Publishing, Git et Le Design Graphique.” <i>Strabic</i>,
                 accessed November 22, 2021. http://strabic.fr/OSP-Visual-Culture.<br><br>
-                <br><br>
 
                 Rubinstein, Rhonda. “Eye Magazine | Feature | Reputations: Zuzana Licko,” <i>Eye</i> no. 43 vol. 11
                 (2002). http://www.eyemagazine.com/<br>feature/article/reputations-zuzana-licko.<br><br>
 
+                <br>
                 Stinson, Liz. “How Computer Code Became a Modern Design Medium—an Oral History,” <i>Eye on Design</i>,
                 December 5, 2019.
                 https://eyeondesign.<br>aiga.org/how-an-mit-research-group-turned-<br>computer-code-into-a-modern-design-medium/.<br><br>
 
                 Stinson, Liz. “Processing: The Software That Shaped Creative Coding,” <i>Eye on Design</i>, October
                 28,
-                2021. https://eyeondesign.aiga.org/processing-the-software-that-shaped-creative-coding/<br><br>
+                2021. https://eyeondesign.aiga.org/<br>processing-the-software-that-shaped-creative-coding/<br><br>
 
                 Stinson, Liz. “Processing: The Software That Shaped Creative Coding, Part II,” <i>Eye on Design</i>,
-                November 1, 2021. https://eyeondesign.aiga.org/an-oral-history-of-processing-part-two/.<br><br>
+                November 1, 2021. https://eyeondesign.aiga.org/<br>an-oral-history-of-processing-part-two/.<br><br>
 
                 Toppins, Aggie. “Can We Teach Graphic Design History Without Chronology?,” <i>Eye on Design</i>,
                 October
                 29, 2020.
-                https://eyeondesign.aiga.org/can-we-teach-graphic-design-history-without-chronology/.<br><br>
+                https://eyeondesign.aiga.org/<br>can-we-teach-graphic-design-history-without-chronology/.<br><br>
 
                 Toppins, Aggie. “Can We Teach Graphic Design History Without the Cult of Hero Worship?,” <i>Eye on
                   Design</i>, May 29, 2020.
@@ -3191,6 +3191,7 @@
                 Curtis, Adam. <i>All Watched Over by Machines of Loving Grace</i>, 2011.
                 https://vimeo.com/515004292.<br><br>
 
+                <br>
                 Etapes. <i>Daniel Shiffman: Computational Design</i>, 2010. https://vimeo.com/14029087.<br><br>
 
                 Eyeo Festival. <i>Eyeo 2013-Zach Lieberman</i>, 2013. https://vimeo.com/69437363.<br><br>
@@ -3228,7 +3229,7 @@
                 https://www.youtube.com/watch?v=2DSe4o45i3o.<br><br>
 
                 Sagmeister, Stefan.<i> The Power of Time Off</i>, TedGlobal, 2009.
-                https://www.ted.com/talks/stefan_sagmeister_<br>the_power_of_time_off.<br>
+                https://www.ted.com/talks/stefan_sagmeister_<br>the_power_of_time_off.<br><br><br><br>
 
                 The Creators Project. <i>How To Draw With Code | Casey Reas</i>, 2012.
                 https://www.youtube.<br>com/watch?v=_8DMEHxOLQE.<br><br>
@@ -3309,7 +3310,6 @@
                 Processing Foundation. “Processing Foundation.” Accessed December 6, 2021.
                 https://processingfoundation.org/.<br><br>
                 <br>
-
                 Provisional Press. “Home.” Accessed December 24, 2020. https://www.provisionalpress.com.<br><br>
 
                 Provisional Press. “Laser Cut Plans.” Accessed December 28, 2020.
@@ -3518,10 +3518,6 @@
         </div>
         <br><br>
       </div>
-
-      <img class="width" src="images/Fig1.4_MacOS_System1.tif" />
-      <img class="width" src="images/Fig1.5_MacOs_Panther.tif" />
-      <img class="width" src="images/Fig1.6_AdobeProducts2021.tif" />
     </section>
   </div>
 
